Fixing overflow-x problem

--- a/zerogames/app/Global-Components/Caruso/page.module.css
+++ b/zerogames/app/Global-Components/Caruso/page.module.css
@@ -227,6 +227,10 @@
         width: 300px;
         height: 200px;
     }
+    .mobilecaruso {
+        width: 90%;
+    }
+    
 }
 
 @media only screen and (max-width: 338px) {
