--- a/zerogames/app/Global-Components/CategoryCaruso/page.module.css
+++ b/zerogames/app/Global-Components/CategoryCaruso/page.module.css
@@ -108,4 +108,7 @@
         width: 200px;
         height: 250px;
     }
+    .mobilecaruso {
+        width: 90%;
+    }
 }
