--- a/zerogames/app/Global-Components/SpecialCaruso/page.module.css
+++ b/zerogames/app/Global-Components/SpecialCaruso/page.module.css
@@ -187,3 +187,10 @@
     }
 
 }
+
+
+@media only screen and (max-width: 580px) {
+    .mobilecaruso {
+        width: 90%;
+    }
+}
